<resources>
    <string name="app_name">TrafficNotificationApplication</string>

    <!-- Strings related to login -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="prompt_phone">Số điện thoại</string>
    <string name="prompt_email">Địa chỉ email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="prompt_passwordre">Xác nhận mật khẩu</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Họ tên</string>
    <string name="prompt_verification">Mã xác thực tài khoản</string>
    <string name="prompt_searchStreet">Địa điểm cần tìm</string>
    <string name="prompt_titleReport">Nội dung (không bắt buộc)</string>
    <string name="prompt_picture">Hình ảnh (không bắt buộc)</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_up">Đăng ký</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_next">Tiếp tục</string>
    <string name="action_register">Đăng ký tài khoản</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_notification">NotificationActivity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_news">NewsActivity</string>


    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="settings">Settings</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settting">SetttingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_setting">Cài đặt</string>

    <string-array name="map_style">
        <item>Aubergine</item>
        <item>Night</item>
        <item>Retro</item>
    </string-array>
    <string name="default_map_style">Night</string>
    <string name="title_map_style">Giao diện</string>
    <string name="pref_list_style">map_style</string>
    <string name="pref_needs_setup">needs_setup</string>
</resources>
